Removed centering on desktop body styles to prevent weird horizontal scrolling.

--- a/src/css/base.less
+++ b/src/css/base.less
@@ -15,6 +15,7 @@ body {
   margin: 0 1em;
   .drop-shadow(.5em, 0px, 1em, .1);
   min-height: 50em;
+  position: relative;
 
   & > h1 {
     text-transform: uppercase;
@@ -24,13 +25,6 @@ body {
     .inset;
     padding: 1em .5em;
     margin: 0 0 1em;
-  }
-
-  //1100px
-  @media screen and (min-width: 69em) {
-    margin: auto;
-    position: relative;
-    left: -11.25em;
   }
 
   @media screen and (max-width: 46em) {
